[package]
name = "night"
version = "0.0.4"
edition = "2021"
authors = ["AX <syrupcake@protonmail.com>"]
readme = "README.md"
description = "A Scalable Distributed Task Queue."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
rand = "0.8"
thiserror = "1.0"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["distributed"]
distributed = []

[lib]
name = "night"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1