[package]
name = "night"
version = "0.0.5"
edition = "2021"
authors = ["AX <syrupcake@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/AXEwiges/night"
repository = "https://github.com/AXEwiges/night"
description = "A scalable Task Queue for executing asynchronous tasks in topological order."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
tempfile = "3.12.0"
crossbeam = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "night"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1